# System-Security

./: .gitignore  README.md  main.py
PRNG/: CMakeLists.txt  cli.py  cml.py  set_up.sh
PRNG/output/: output.txt
PRNG/output/analysis/: finalAnalysisReport.txt  finalAnalysisReport_10.txt  finalAnalysisReport_12-13.txt
PRNG/output/process_str/: pre_output.txt
PRNG/src/: config.hpp  main.cpp  xoroshiro.cpp  xoroshiro.hpp
PRNG/src/other_approach/: example.cc  xorshift.hpp
PRNG/src/python/: cli.py  constants.py  processing.py  test_handle.py
PRNG/src/xoroshiro/: config.hpp  main.cpp  xoroshiro.cpp  xoroshiro.hpp
PRNG/sts-2.1.2/experiments/AlgorithmTesting/: finalAnalysisReport.txt  freq.txt
PRNG/sts-2.1.2/experiments/AlgorithmTesting/ApproximateEntropy/: results.txt  stats.txt
PRNG/sts-2.1.2/experiments/AlgorithmTesting/BlockFrequency/: results.txt  stats.txt
PRNG/sts-2.1.2/experiments/AlgorithmTesting/CumulativeSums/: data1.txt  data2.txt  results.txt  stats.txt
PRNG/sts-2.1.2/experiments/AlgorithmTesting/FFT/: results.txt  stats.txt
PRNG/sts-2.1.2/experiments/AlgorithmTesting/Frequency/: stats.txt
PRNG/sts-2.1.2/experiments/AlgorithmTesting/LinearComplexity/: results.txt  stats.txt
PRNG/sts-2.1.2/experiments/AlgorithmTesting/LongestRun/: results.txt  stats.txt
PRNG/sts-2.1.2/experiments/AlgorithmTesting/NonOverlappingTemplate/: data1.txt  data10.txt  data100.txt  data101.txt  data102.txt  data103.txt  data104.txt  data105.txt  data106.txt  data107.txt  data108.txt  data109.txt  data11.txt  data110.txt  data111.txt  data112.txt  data113.txt  (+132 more)
(+227 files in other folders)
